--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,12 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>AnimalShelterConversion</groupId>
-            <artifactId>AnimalShelter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>AnimalShelterConversion</groupId>-->
+            <!--<artifactId>AnimalShelter</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
     </dependencies>
 
 
